styled scrollbar and fixed password generator

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,6 +29,27 @@ body {
     visibility: hidden;
 }
 
+/* Scrollbar style */
+
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+	background-color: #e2e2e2;
+}
+
+*::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #e2e2e2;
+}
+
+*::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+	background-color: #000000;
+}
+
 /* --------------------------------- */
 /* RESUABLE COMPONENTS */
 /* --------------------------------- */
